Bug 1875272: Deactivate remote canvas if reference texture create fails. r=aosmond,gfx-reviewers a=pascalc

Depends on D199222

Differential Revision: https://phabricator.services.mozilla.com/D199223