gfx/layers/ipc/CanvasTranslator.cpp
@@ -145,7 +145,8 @@ mozilla::ipc::IPCResult CanvasTranslator::RecvInitTranslator(
   mHeaderShmem = MakeAndAddRef<ipc::SharedMemoryBasic>();
   if (!CreateAndMapShmem(mHeaderShmem, std::move(aReadHandle),
                          ipc::SharedMemory::RightsReadWrite, sizeof(Header))) {
-    return IPC_FAIL(this, "Failed.");
+    Deactivate();
+    return IPC_FAIL(this, "Failed to map canvas header shared memory.");
   }
 
   mHeader = static_cast<Header*>(mHeaderShmem->memory());
@@ -175,7 +176,8 @@ mozilla::ipc::IPCResult CanvasTranslator::RecvInitTranslator(
   auto handleIter = aBufferHandles.begin();
   if (!CreateAndMapShmem(mCurrentShmem.shmem, std::move(*handleIter),
                          ipc::SharedMemory::RightsReadOnly, aBufferSize)) {
-    return IPC_FAIL(this, "Failed.");
+    Deactivate();
+    return IPC_FAIL(this, "Failed to map canvas buffer shared memory.");
   }
   mCurrentMemReader = mCurrentShmem.CreateMemReader();
 
@@ -184,7 +186,8 @@ mozilla::ipc::IPCResult CanvasTranslator::RecvInitTranslator(
     CanvasShmem newShmem;
     if (!CreateAndMapShmem(newShmem.shmem, std::move(*handleIter),
                            ipc::SharedMemory::RightsReadOnly, aBufferSize)) {
-      return IPC_FAIL(this, "Failed.");
+      Deactivate();
+      return IPC_FAIL(this, "Failed to map canvas buffer shared memory.");
     }
     mCanvasShmems.emplace(std::move(newShmem));
   }
@@ -387,7 +390,9 @@ void CanvasTranslator::Deactivate() {
     return;
   }
   mDeactivated = true;
-  mHeader->readerState = State::Failed;
+  if (mHeader) {
+    mHeader->readerState = State::Failed;
+  }
 
   // We need to tell the other side to deactivate. Make sure the stream is
   // marked as bad so that the writing side won't wait for space to write.
@@ -653,20 +658,23 @@ bool CanvasTranslator::CreateReferenceTexture() {
   mReferenceTextureData =
       CreateTextureData(gfx::IntSize(1, 1), gfx::SurfaceFormat::B8G8R8A8, true);
   if (!mReferenceTextureData) {
+    Deactivate();
     return false;
   }
 
   if (NS_WARN_IF(!mReferenceTextureData->Lock(OpenMode::OPEN_READ_WRITE))) {
     gfxCriticalNote << "CanvasTranslator::CreateReferenceTexture lock failed";
     mReferenceTextureData.reset();
+    Deactivate();
     return false;
   }
 
   mBaseDT = mReferenceTextureData->BorrowDrawTarget();
 
   if (!mBaseDT) {
-    // We might get a null draw target due to a device failure, just return
-    // false so that we can recover.
+    // We might get a null draw target due to a device failure, deactivate and
+    // return false so that we can recover.
+    Deactivate();
     return false;
   }
 
